--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -23,6 +23,10 @@
 	font-size:math.div(27,10)*1rem;
 	width: math.div(27,27)*1em;
 }
+.icon-chevron-down {
+	font-size:math.div(6,10)*1rem;
+	width: math.div(11,6)*1em;
+}
 .icon-chevron-right {
 	font-size:math.div(20,10)*1rem;
 	width: math.div(13,20)*1em;
@@ -30,6 +34,10 @@
 .icon-fb {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
+}
+.icon-geo-tag {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(16,16)*1em;
 }
 .icon-headerBlock-1 {
 	font-size:math.div(32,10)*1rem;
