--- a/sourse/pug/blocks/topLine/_topLine.scss
+++ b/sourse/pug/blocks/topLine/_topLine.scss
@@ -12,8 +12,11 @@
 		.row {
 			--bs-gutter-x: #{rem(45)};
 			align-items: center;
-			flex-wrap: nowrap;
+			// flex-wrap: nowrap;
 		}
+	}
+	&__col {
+		margin-right: auto;
 	}
 	&__logo {
 		&:not(:hover) {
@@ -65,6 +68,7 @@
 			color: $secondary;
 		}
 	}
+
 	@include media-breakpoint-up(xl) {
 	}
 	@include media-breakpoint-up(lg) {
@@ -104,3 +108,62 @@
 	@include media-breakpoint-down(xs) {
 	}
 } // end.topLine
+
+.locaton-dropdown {
+	&__btn {
+		@include roww(5px, m);
+		@include mt;
+		display: flex;
+		align-items: center;
+		padding: rem(5) 0;
+		cursor: pointer;
+		&:hover {
+			color: $link-hover-color;
+		}
+		.icon-geo-tag {
+			font-size: rem(16);
+		}
+		.icon-chevron-down {
+			font-size: rem(5);
+			fill: none;
+			stroke: currentColor;
+			stroke-width: 1.5px;
+			transition: transform var(--s) ease-in-out;
+		}
+		span {
+			font-weight: 600;
+			font-size: rem(12);
+			line-height: 100%;
+		}
+	}
+	&.active {
+		.dropdown__btn {
+			.icon-chevron-down {
+				transform: rotateX(180deg);
+			}
+		}
+	}
+	&__content {
+		background-color: $white;
+		left: rem(-10);
+		width: calc(100% + rem(20));
+		padding: rem(10);
+		border-radius: 10px;
+		border: 1px solid $info;
+		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
+	}
+	&__item {
+		display: block;
+		font-size: rem(13);
+		margin-bottom: rem(5);
+		font-weight: 500;
+		line-height: 1.3;
+		padding: 2.5px 0;
+		&:last-child {
+			margin-bottom: 0;
+		}
+		&:not(:hover) {
+			color: $body-color;
+		}
+	}
+}
