--- a/sourse/pug/blocks/topLine/_topLine.pug
+++ b/sourse/pug/blocks/topLine/_topLine.pug
@@ -20,11 +20,11 @@ mixin topLine()
 									+e.item(href="#") Санкт-Петербург и&nbsp;область
 									+e.item(href="#") И так далее
 									
-						.col-auto
+						.col-sm-auto
 							+e.schedule
 								span открыто
 								span Пн&ndash;Вс &bull; 9:00&ndash;21:00
-						.col-auto
+						.col-auto.d-none.d-md-flex
 							+e.label 
 								span Работаем с&nbsp;2012 года
 	// end topLine
