--- a/sourse/pug/blocks/mixin-wrap/components/menu.pug
+++ b/sourse/pug/blocks/mixin-wrap/components/menu.pug
@@ -1,10 +1,15 @@
 -
 	var nav= { 
-		"Наши работы":"#",
+		"Каталог":"#",
+		"Портфолио":"#",
+		"Дизайн":"#",
+		"Калькулятор":"#" ,
 		"Цены":"#",
-		"Калькулятор":"#",
-		"Акции":"#" ,
-		"Заказать":"#",
+		"Отзывы":"#",
+		"Этапы":"#",
+		"Компания":"#",
+		"Контакты":"#",
+		"Блог":"#",
 		}
 -
 	//- var subnav= { 
