--- a/sourse/pug/blocks/sProducts/_sProducts.scss
+++ b/sourse/pug/blocks/sProducts/_sProducts.scss
@@ -3,6 +3,9 @@
 	--sPT: 0;
 	--sPB: 0;
 	// --sTPB: ;
+	.row {
+		--bs-gutter-y: var(--bs-gutter-x);
+	}
 	&__filter {
 		display: flex;
 		align-items: center;
@@ -14,33 +17,53 @@
 			margin-right: rem(14.5);
 			margin-bottom: 0;
 		}
-		a {
+		select {
 			font-weight: 800;
 			color: $secondary;
+			font-size: rem(18);
+			padding: 6px;
 			&:hover {
-				color: $primary;
-			}
-			.icon {
-				transform: rotate(90deg);
-				font-size: rem(8);
-				stroke-width: 2px;
-    		stroke: currentColor;
+				border: 1px solid $secondary;
 			}
 		}
 	}
 	&__card {
+		@include mt;
 		padding: rem(24) rem(23.63) rem(20.5) rem(24);
-		margin-bottom: rem(32);
+		// margin-bottom: rem(32);
 		border-radius: rem(20);
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
 		border: 1px solid $light;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		&:hover {
+			box-shadow: none;
+			h4 {
+				color: $gray-900;
+			}
+			picture {
+				box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
+			}
+		}
+		a {
+			flex-grow: 1;
+		}
 		picture {
+			@include mt;
+			@include block(336, 200);
 			border: 1px solid #E0E0E0;
 			border-radius: 8px;
 			overflow: hidden;
 			margin-bottom: rem(24);
+			img {
+				position: absolute;
+				left: 0;
+				top: 0;
+			}
 		}
 		h4 {
+			@include mt;
 			margin-bottom: rem(10);
 		}
 		& > p {
@@ -78,21 +101,59 @@
 			margin-bottom: 0;
 		}
 	}
-	.page-numbers {
-		justify-content: center;
-	}
-	.pagination-wrraper {
-
-	}
-	.page-numbers {
-		color: $black;
-		font-size: rem(12);
-		font-weight: 600;
-		a {
-			border: 1px solid rgba(44, 52, 64, 0.5);
-			border-radius: 8px;
-		}
-	}
+	// .page-numbers {
+	// 	justify-content: center;
+	// }
+	// .pagination-wrraper {
+	// 	ul {
+	// 		color: $black;
+	// 		font-size: rem(12);
+	// 		font-weight: 600;
+	// 		border-radius: 8px;
+	// 		column-gap: 16px;
+	// 		// padding: 0;
+	// 		// width: rem(32);
+	// 		// height: rem(32);
+	// 		&.current {
+	// 			background-color: $primary;
+	// 			border-color: $primary;
+	// 			color: $black;
+	// 			&:hover {
+	// 				background-color: $primary;
+	// 				border-color: $primary;
+	// 				color: $black;
+	// 			}
+	// 		}
+	// 		li {
+	// 			.page-numbers {
+	// 				padding: 0;
+	// 				width: rem(32);
+	// 				height: rem(32);
+	// 			}
+	// 		}
+	// 		a {
+	// 			border: 1px solid rgba(44, 52, 64, 0.5);
+	// 			color: $black;
+	// 			&:hover {
+	// 				color: $black;
+	// 				background-color: $primary;
+	// 				border-color: $primary;
+	// 			}
+	// 		}
+	// 		.icon {
+	// 			font-size: rem(9);
+	// 		}
+	// 		.prev,
+	// 		.next {
+	// 			cursor:  pointer;
+	// 			background-color: $secondary;
+	// 			color: $primary;
+	// 			&:hover {
+	
+	// 			}
+	// 		}
+	// 	}
+	// }
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
