--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -59,6 +59,10 @@
 	font-size:math.div(40,10)*1rem;
 	width: math.div(103,40)*1em;
 }
+.icon-next {
+	font-size:math.div(10,10)*1rem;
+	width: math.div(8,10)*1em;
+}
 .icon-person {
 	font-size:math.div(25,10)*1rem;
 	width: math.div(25,25)*1em;
@@ -66,6 +70,10 @@
 .icon-positive {
 	font-size:math.div(18,10)*1rem;
 	width: math.div(18,18)*1em;
+}
+.icon-prev {
+	font-size:math.div(10,10)*1rem;
+	width: math.div(8,10)*1em;
 }
 .icon-sStages-arrow {
 	font-size:math.div(57,10)*1rem;
