--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -1010,25 +1010,25 @@ $pagination-padding-x-sm: .5rem !default;
 $pagination-padding-y-lg: .75rem !default;
 $pagination-padding-x-lg: 1.5rem !default;
 
-$pagination-color: $link-color !default;
+$pagination-color: $black !default;
 $pagination-bg: $white !default;
 $pagination-border-width: $border-width !default;
-$pagination-border-radius: $border-radius !default;
+$pagination-border-radius: 8px !default;
 $pagination-margin-start: -$pagination-border-width !default;
-$pagination-border-color: $gray-300 !default;
+$pagination-border-color: $secondary !default;
 
 $pagination-focus-color: $link-hover-color !default;
-$pagination-focus-bg: $gray-200 !default;
-$pagination-focus-box-shadow: $input-btn-focus-box-shadow !default;
+$pagination-focus-bg: $primary !default;
+$pagination-focus-box-shadow: none !default;
 $pagination-focus-outline: 0 !default;
 
-$pagination-hover-color: $link-hover-color !default;
-$pagination-hover-bg: $gray-200 !default;
-$pagination-hover-border-color: $gray-300 !default;
+$pagination-hover-color: $black !default;
+$pagination-hover-bg: $primary !default;
+$pagination-hover-border-color: $primary !default;
 
-$pagination-active-color: $component-active-color !default;
-$pagination-active-bg: $component-active-bg !default;
-$pagination-active-border-color: $pagination-active-bg !default;
+$pagination-active-color: $black!default;
+$pagination-active-bg: $primary !default;
+$pagination-active-border-color: $primary !default;
 
 $pagination-disabled-color: $gray-600 !default;
 $pagination-disabled-bg: $white !default;
