--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -59,6 +59,10 @@
 	font-size:math.div(40,10)*1rem;
 	width: math.div(103,40)*1em;
 }
+.icon-menu {
+	font-size:math.div(12,10)*1rem;
+	width: math.div(15,12)*1em;
+}
 .icon-person {
 	font-size:math.div(25,10)*1rem;
 	width: math.div(25,25)*1em;
