--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -8,6 +8,9 @@
 		& > .row {
 			align-items: center;
 			--bs-gutter-x: #{rem(16)};
+			@include media-breakpoint-up(xl) {
+				--bs-gutter-x: #{rem(24)};
+			}
 		}
 	}
 	@include media-breakpoint-up(xl) {
@@ -20,6 +23,15 @@
 	}
 	p {
 		@include ell();
+	}
+	&__tel {
+		display: inline-block;
+		font-weight: bold;
+		font-size: rem(16);
+		line-height: 145%;
+		&:not(:hover) {
+			color: $secondary;
+		}
 	}
 
 	@include media-breakpoint-up(md) {
@@ -162,8 +174,23 @@
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
 		border-radius: 16px;
 		padding: rem(27) rem(33);
+		h6 {
+			margin-bottom: rem(20);
+		}
 		ul {
 			list-style: none;
+			margin-bottom: 0;
+			li {
+				font-size: rem(12);
+				line-height: 115%;
+				margin-bottom: rem(10);
+
+				a {
+					&:not(:hover) {
+						color: #000000;
+					}
+				}
+			}
 		}
 	}
 }
