--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -1,9 +1,12 @@
 .top-nav {
 	// background: svg-load('../svg/check.svg',  stroke=$primary);
 	//
-	height: rem(64);
+	height: rem(48);
 	display: flex;
 	align-items: center;
+	@include media-breakpoint-up(lg) {
+		height: rem(64);
+	}
 	& > .container {
 		& > .row {
 			align-items: center;
@@ -11,6 +14,11 @@
 			@include media-breakpoint-up(xl) {
 				--bs-gutter-x: #{rem(24)};
 			}
+		}
+	}
+	&__col {
+		@include media-breakpoint-down(sm) {
+			padding: 0;
 		}
 	}
 	@include media-breakpoint-up(xl) {
@@ -29,6 +37,10 @@
 		font-weight: bold;
 		font-size: rem(16);
 		line-height: 145%;
+		white-space: nowrap;
+		@include media-breakpoint-only(lg) {
+			font-size: rem(14);
+		}
 		&:not(:hover) {
 			color: $secondary;
 		}
@@ -86,12 +98,15 @@
 		justify-content: center;
 		padding: rem(10);
 		font-weight: 600;
-		font-size: rem(12);
 		line-height: 100%;
 		background-color: $light;
 		border-radius: 4px;
 		color: $secondary;
 		cursor: pointer;
+		font-size: rem(11);
+		@include media-breakpoint-up(xl) {
+			font-size: rem(12);
+		}
 		& > span {
 			display: block;
 			line-height: inherit;
