--- a/sourse/pug/blocks/sProducts/_sProducts.pug
+++ b/sourse/pug/blocks/sProducts/_sProducts.pug
@@ -12,18 +12,20 @@ mixin sProducts(data)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
 					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
-					+e.specifications-wrap
-						span Тип
-						p навесы для дачи
-					+e.specifications-wrap
-						span Тип навеса
-						p полуарочный
-					+e.specifications-wrap
-						span Кровля
-						p сотовый поликарбонат
-					+e.specifications-wrap
-						span Каркас
-						p Металический
+					table
+						tbody
+							tr
+								td Тип
+								td навесы для дачи
+							tr
+								td Тип навеса
+								td полуарочный
+							tr
+								td Кровля
+								td сотовый поликарбонат
+							tr
+								td Каркас
+								td еталический
 					+e.more
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
@@ -34,18 +36,20 @@ mixin sProducts(data)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
 					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
-					+e.specifications-wrap
-						span Тип
-						p навесы для дачи
-					+e.specifications-wrap
-						span Тип навеса
-						p полуарочный
-					+e.specifications-wrap
-						span Кровля
-						p сотовый поликарбонат
-					+e.specifications-wrap
-						span Каркас
-						p Металический
+					table
+						tbody
+							tr
+								td Тип
+								td навесы для дачи
+							tr
+								td Тип навеса
+								td полуарочный
+							tr
+								td Кровля
+								td сотовый поликарбонат
+							tr
+								td Каркас
+								td еталический
 					+e.more
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
@@ -56,18 +60,20 @@ mixin sProducts(data)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
 					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
-					+e.specifications-wrap
-						span Тип
-						p навесы для дачи
-					+e.specifications-wrap
-						span Тип навеса
-						p полуарочный
-					+e.specifications-wrap
-						span Кровля
-						p сотовый поликарбонат
-					+e.specifications-wrap
-						span Каркас
-						p Металический
+					table
+						tbody
+							tr
+								td Тип
+								td навесы для дачи
+							tr
+								td Тип навеса
+								td полуарочный
+							tr
+								td Кровля
+								td сотовый поликарбонат
+							tr
+								td Каркас
+								td еталический
 					+e.more
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
@@ -78,18 +84,20 @@ mixin sProducts(data)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
 					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
-					+e.specifications-wrap
-						span Тип
-						p навесы для дачи
-					+e.specifications-wrap
-						span Тип навеса
-						p полуарочный
-					+e.specifications-wrap
-						span Кровля
-						p сотовый поликарбонат
-					+e.specifications-wrap
-						span Каркас
-						p Металический
+					table
+						tbody
+							tr
+								td Тип
+								td навесы для дачи
+							tr
+								td Тип навеса
+								td полуарочный
+							tr
+								td Кровля
+								td сотовый поликарбонат
+							tr
+								td Каркас
+								td еталический
 					+e.more
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
@@ -100,18 +108,20 @@ mixin sProducts(data)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
 					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
-					+e.specifications-wrap
-						span Тип
-						p навесы для дачи
-					+e.specifications-wrap
-						span Тип навеса
-						p полуарочный
-					+e.specifications-wrap
-						span Кровля
-						p сотовый поликарбонат
-					+e.specifications-wrap
-						span Каркас
-						p Металический
+					table
+						tbody
+							tr
+								td Тип
+								td навесы для дачи
+							tr
+								td Тип навеса
+								td полуарочный
+							tr
+								td Кровля
+								td сотовый поликарбонат
+							tr
+								td Каркас
+								td еталический
 					+e.more
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
@@ -122,18 +132,20 @@ mixin sProducts(data)
 						h4 Навес 4&times;8&nbsp;м из&nbsp;сотового поликарбоната
 					p Гарабиты: 6&times;6&nbsp;м &bull; Высота по&nbsp;столбам: 2,4&nbsp;м
 					h5 Характеристики
-					+e.specifications-wrap
-						span Тип
-						p навесы для дачи
-					+e.specifications-wrap
-						span Тип навеса
-						p полуарочный
-					+e.specifications-wrap
-						span Кровля
-						p сотовый поликарбонат
-					+e.specifications-wrap
-						span Каркас
-						p Металический
+					table
+						tbody
+							tr
+								td Тип
+								td навесы для дачи
+							tr
+								td Тип навеса
+								td полуарочный
+							tr
+								td Кровля
+								td сотовый поликарбонат
+							tr
+								td Каркас
+								td еталический
 					+e.more
 						p 150 400 ₽
 						a.btn.btn-primary.btn-sm(href="#") Подробнее 
