--- a/sourse/pug/blocks/topLine/_topLine.pug
+++ b/sourse/pug/blocks/topLine/_topLine.pug
@@ -21,7 +21,7 @@ mixin topLine()
 									+e.item(href="#") И так далее
 									
 						.col-sm-auto
-							+e.schedule
+							+b.schedule
 								span открыто
 								span Пн&ndash;Вс &bull; 9:00&ndash;21:00
 						.col-auto.d-none.d-md-flex
