--- a/sourse/pug/pages/03-portfolio.pug
+++ b/sourse/pug/pages/03-portfolio.pug
@@ -39,6 +39,7 @@ block pagecontent
 				+sFilter()
 			.col-lg-8
 				+sProducts()
+	+sContact()
 	//- +headerBlock()
 	//- +sCatalog()
 	//- .section-wrapper
@@ -56,7 +57,6 @@ block pagecontent
 	//- 	+sAccordion()
 	//- 	+sCertificates()
 	//- 	+sCatalogProd()
-	//- +sContact()
 	//- .section-wrapper
 		+footer()
 	//- +sForm()
