--- a/sourse/pug/blocks/sContact/_sContact.scss
+++ b/sourse/pug/blocks/sContact/_sContact.scss
@@ -1,7 +1,209 @@
 
 	// start .sContact
 	.sContact {
-		 
+	h2 {
+		margin-bottom: rem(32);
+		@include media-breakpoint-up(lg) {
+			margin-bottom: rem(78);
+		}
+		@include media-breakpoint-up(lg) {
+			margin-bottom: rem(78);
+		}
+	}
+	&__row {
+		margin-bottom: rem(16);
+		@include media-breakpoint-up(md) {
+			margin-bottom: rem(40);
+		}
+		@include media-breakpoint-up(lg) {
+			margin-bottom: rem(80);
+		}
+	}  
+	&__map {
+		position: relative;
+		// height: rem(751);
+		height: 100%;
+		// min-height: rem(400);
+		max-height: rem(622);
+		@include block(800, 622);
+		@include media-breakpoint-down(lg) {
+			margin-bottom: rem(30);
+		}
+		.ymaps-map {
+			border-radius: rem(16);
+		}
+		& > * {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100% !important;
+			height: 100% !important;
+		}
+		&::after {
+			position: absolute;
+			content: '';
+			background: #F2F6FC;
+			filter: blur(321px);
+			display: block;
+			width: rem(815);
+			height: rem(815);
+			top: -50%;
+			left: -50%;
+			z-index: -7;
+		}
+	}
+	&__info {
+		display: flex;
+		align-items: flex-start;
+		flex-direction: column;
+		margin-bottom: rem(30);
+		margin-top: rem(13);
+		@include media-breakpoint-up(lg) { 
+			margin-top: 0;
+			align-items: center;
+			flex-direction: row;
+		}
+		.locaton-dropdown {
+			margin-right: rem(30);
+			margin-bottom: rem(33);
+			@include media-breakpoint-up(lg) {
+				margin-bottom: 0;
+			}
+			.icon {
+				color: #B8B8B8;
+			}
+		}
+		.schedule {
+			span {
+				&:first-child {
+					background-color: #B8B8B8;
+				}
+			}
+		}
+	}
+	&__wrap {
+		&:not(:last-of-type) {
+			margin-bottom: rem(30);
+		}
+		h5 {
+			@include rfs(18px);
+			margin-bottom: rem(15);
+		}
+		& > a {
+			font-size: rem(14);
+			color: $dark;
+			&:hover {
+				color: $primary;
+			}
+		}
+
+	}
+	&__map-point {
+		@include mt;
+		background-color: $light;
+		border-radius: rem(1000);
+		padding: rem(12) rem(16);
+		font-size: rem(12);
+		font-weight: 600;
+		width: fit-content;
+		line-height: 12px;
+		cursor: pointer;
+		&:not(:last-of-type) {
+			margin-bottom: rem(8);
+		}
+		&:hover {
+			box-shadow: 0 0 1.25rem rgb(0 0 0 / 15%);
+		}
+	}
+	&__phone-number {
+		display: flex;
+		flex-direction: column;
+		a {
+			font-size: rem(24);
+			color: $dark;
+			&:hover {
+				color: $primary;
+			}
+		}
+	}
+	&__content {
+		display: flex;
+		align-items: flex-end;
+		flex-wrap: wrap;
+		max-width: rem(349);
+		gap: rem(15);
+	}
+	&__links {
+		background-color: $light;
+		&:hover {
+			background-color: $primary;
+		}
+		.icon {
+			font-size: rem(15);
+		}
+		&:first-of-type {
+			padding: rem(6) rem(11) rem(6) rem(11);
+			border-radius: rem(1000);
+			color: $dark;
+			font-size: rem(12);
+			&:hover {
+				color: $dark;
+			}
+			span {
+				font-size: rem(12);
+				font-weight: 600;
+			}
+			.icon {
+				color: $success;
+				margin-right: rem(8);
+				vertical-align: sub;
+			}
+		}
+		&:not(:first-of-type) {
+			width: rem(32);
+			height: rem(32);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border-radius: rem(1000);
+			.icon {
+				color: #D21FFF;
+			}
+		}
+		&--yt{
+			.icon {
+				color: #FF0000 !important;
+			}
+		}
+	}
+	&__btn {
+		padding: rem(9) rem(24);
+		font-size: rem(12) !important;
+		&:hover {
+			color: $dark !important;
+			box-shadow: 0 0 1.25rem rgb(0 0 0 / 15%);
+		}
+	}
+	.form-wrap {
+		&__input-wrap {
+			&:first-of-type {
+				@include media-breakpoint-down(lg) {
+					margin-bottom: rem(8);
+				}
+			}
+		}
+		&__input {
+			border: 1px solid $info;
+			border-radius: 8px;
+		}
+		textarea {
+			min-height: rem(112);
+		}
+		button {
+			width: 100%;
+			margin-top: rem(20);
+		}
+	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
