--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -1,11 +1,19 @@
 .top-nav {
 	// background: svg-load('../svg/check.svg',  stroke=$primary);
 	//
-	height: rem(48);
+	background-color: $white;
 	display: flex;
 	align-items: center;
+	z-index: 999;
+	position: fixed;
+	width: 100%;
+	left: 0;
+	top: 0;
+	height: rem(48);
 	@include media-breakpoint-up(lg) {
 		height: rem(64);
+	}
+	&.fixed {
 	}
 	& > .container {
 		& > .row {
@@ -43,6 +51,50 @@
 		}
 		&:not(:hover) {
 			color: $secondary;
+		}
+	}
+	&__btn-wrap {
+		padding: 0 rem(16);
+		margin-bottom: rem(24);
+		@include media-breakpoint-up(lg) {
+			display: none;
+		}
+	}
+	&__btn {
+		@extend .btn, .btn-primary, .with-shadow;
+		width: 100%;
+	}
+	&__list {
+		margin-bottom: rem(26);
+		&:last-of-type {
+			margin-bottom: 0;
+			ul {
+				columns: 1;
+			}
+		}
+		ul {
+			columns: 2;
+			margin-bottom: 0;
+		}
+		li {
+			a {
+				display: block;
+				padding: rem(16) calc(var(--bs-gutter-x) / 2);
+				font-weight: 400;
+				font-size: rem(12);
+				line-height: 115%;
+				&:not(:hover) {
+					color: $secondary;
+				}
+			}
+		}
+		h6 {
+			font-size: rem(16);
+			padding: 0 rem(16);
+			margin-bottom: rem(12);
+		}
+		@include media-breakpoint-up(lg) {
+			display: none;
 		}
 	}
 
