--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -82,7 +82,10 @@
 				padding: rem(16) calc(var(--bs-gutter-x) / 2);
 				font-weight: 400;
 				font-size: rem(12);
-				line-height: 115%;
+				line-height: 100%;
+				@include media-breakpoint-between(sm, lg) {
+					font-size: rem(14);
+				}
 				&:not(:hover) {
 					color: $secondary;
 				}
@@ -92,6 +95,9 @@
 			font-size: rem(16);
 			padding: 0 rem(16);
 			margin-bottom: rem(12);
+			@include media-breakpoint-up(sm) {
+				font-size: rem(18);
+			}
 		}
 		@include media-breakpoint-up(lg) {
 			display: none;
