--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -30,18 +30,21 @@
 				background-color: $light;
 				color: $success;
 				&:hover {
+					background-color: lighten($light, 10%);
 				}
 			}
 			&--phone-call {
 				background-color: $primary;
 				color: $secondary;
 				&:hover {
+					background-color: lighten($primary, 10%);
 				}
 			}
 			&--measuring {
 				background-color: $secondary;
 				color: $primary;
 				&:hover {
+					background-color: lighten($secondary, 10%);
 				}
 			}
 		}
