--- a/sourse/pug/blocks/sCertificates/_sCertificates.scss
+++ b/sourse/pug/blocks/sCertificates/_sCertificates.scss
@@ -35,6 +35,7 @@
 	}
 
 	&__item {
+		@include mt;
 		padding: rem(24) rem(24) rem(28);
 		background-color: $white;
 		max-width: rem(365);
@@ -43,6 +44,9 @@
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
 		border-radius: $border-radius-lg;
 		cursor: pointer;
+		&:hover {
+			box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.03);
+		}
 		picture {
 			@include block(230, 328);
 			img {
