--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -248,6 +248,7 @@
 		box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
 		border-radius: 16px;
 		padding: rem(27) rem(33);
+		// top: 140%;
 		h6 {
 			margin-bottom: rem(20);
 		}
