--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -2,8 +2,72 @@ mixin footer()
 	+b.FOOTER.footer
 		.container
 			.row
-				.col
-					
-				.col
-				.col
-				.col-auto
+				.col-lg-3
+					+e.head
+						+b.logo(href="/")
+							+icon('logo-top')
+						+b.label 
+								span Работаем с&nbsp;2012 года
+					a.btn.btn-primary.btn-sm(href="#") Вызвать замерщика 
+				.col-lg-2.ml-auto
+					h6 Компания
+					ul
+						li
+							a(href="#") Калькулятор
+						li
+							a(href="#") Портфолио
+						li
+							a(href="#") Отзывы
+						li
+							a(href="#") Блог
+				.col-lg-2
+					h6 Навесы
+					ul
+						li
+							a(href="#") Для авто
+						li
+							a(href="#") Для парковки
+						li
+							a(href="#") К дому
+						li
+							a(href="#") Беседка
+						li
+							a(href="#") Для дачи
+						li
+							a(href="#") Кольцо и козырек
+						li
+							a(href="#") Для бассейна
+						li
+							a(href="#") Ангар
+				.col-lg-3
+					h6 Производим также
+					ul
+						li
+							a(href="#") Бетонные площадки
+						li
+							a(href="#") Заезды на участок
+						li
+							a(href="#") Укладка тротуарной плитки
+						li
+							a(href="#") Ворота откатные и распашные
+						li
+							a(href="#") Заборы и ограждения
+						li
+							a(href="#") Кованые изделия
+						li
+							a(href="#") Крыльцо
+						li
+							a(href="#") Лестница в дом
+						li
+							a(href="#") Лестница на улице
+						li
+							a(href="#") Ангары
+						li
+							a(href="#") Изготовление металлоконструкций
+						li
+							a(href="#") Беседки 
+				.col-lg-8
+					+e.content
+						span © 2022
+						a(href="#") Политика конфиденцильности
+						p Данный сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, которая определяется положениями статьи 437 (2) Гражданского кодекса РФ. Для получения подробной информации о&nbsp;наличии и&nbsp;стоимости указанных товаров и&nbsp;услуг, обращайтесь к&nbsp;нашим менеджерам или укажите телефон, чтобы мы&nbsp;перезвонили вам. 
