--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -6,7 +6,7 @@ mixin sContact()
 				h4 Контакты
 				h2 Позвоните или посетите наш офис на&nbsp;производстве
 			+e.row.row
-				.col-lg-8
+				.col-lg-7.col-xxl-8
 					+e.map
 						#map
 						//- <div id="map"style="width:100%; height:360px"></div>
@@ -40,7 +40,7 @@ mixin sContact()
 									}
 									// Добавляем все метки на карту.
 								};
-				.col-lg-4
+				.col-lg-5.col-xxl-4
 					+e.info
 						+b.locaton-dropdown.dropdown
 								+e.btn.dropdown__btn
