--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -1,7 +1,96 @@
 .footer {
-		
+	padding-top: rem(24);
+	padding-bottom: rem(21);
 	margin-top: auto;
-
+	@include media-breakpoint-up(md) {
+		padding-top: rem(35);
+		padding-bottom: rem(35);
+	}
+	@include media-breakpoint-up(lg) {
+		padding-top: rem(57);
+		padding-bottom: rem(57);
+	}
+	&__head {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: rem(25);
+		@include media-breakpoint-up(lg) {
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: flex-start;
+			margin-bottom: 0;
+		}
+	}
+	.logo {
+		display: inline-block;
+		@include media-breakpoint-up(lg) {
+			margin-bottom: rem(32);
+		}
+	}
+	.label {
+		background-color: $secondary;
+		width: rem(141);
+		height: rem(21);
+		clip-path: polygon(100% 0%, calc(100% - 12px) 50%, 100% 100%, 0 100%, 0 0);
+		@include media-breakpoint-up(lg) {
+			font-size: rem(14);
+			width: rem(199);
+			height: rem(32);
+			clip-path: polygon(100% 0%, calc(100% - 20px) 50%, 100% 100%, 0 100%, 0 0);
+			margin-bottom: rem(16);
+		}
+		span {
+			color: $white;
+			font-size: rem(9);
+			@include media-breakpoint-up(lg) {
+				font-size: rem(14);
+			}
+		}
+	}
+	h6 {
+		margin-bottom: rem(20);
+		color: $dark;
+	}
+	ul {
+		list-style-type: none;
+	}
+	li {
+		line-height: 1.15em;
+		&:not(:last-child) {
+			margin-bottom: rem(10);
+		}
+		a {
+			font-size: rem(12);
+			&:not(:hover) {
+				color: $black;
+			}
+		}
+	}
+	&__content {
+		// position: absolute;
+		@include media-breakpoint-up(lg) {
+			margin-top: rem(-113);
+		}
+		span {
+			font-size: rem(12);
+			color: $secondary;
+			margin-right: rem(37);
+		}
+		a {
+			font-size: rem(12);
+			&:not(:hover) {
+				color: $secondary;
+			}
+		}
+		p {
+			padding-top: rem(21);
+			font-size: rem(12);
+			line-height: 1.30em;
+			color: rgba(44, 52, 64, 0.5);
+			margin-bottom: 0;
+		}
+	}
 // 
 @include media-breakpoint-up(xl) {}
 
@@ -40,4 +129,8 @@
 @include media-breakpoint-down(sm) {}
 
 @include media-breakpoint-down(xs) {}
+}
+
+.ml-auto {
+	margin-left: auto;
 }
